# test

./: .cproject  .project  1_history.txt  CMakeLists.txt  README.md  users.txt
.github/workflows/: cd.yml  ci.yml
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: text.language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 0.snap
.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
Debug/src/: User.d  UserManager.d  ai_logic.d  game_logic.d  game_ui.d
New folder/: User.cpp  game_constants.h  game_ui.cpp  kenzy_history.txt  leaderboard.cpp  leaderboard.h
data/: score.txt  users.txt
include/: ai_logic.h  game_constants.h
src/: User.cpp  ai_logic.cpp  game_logic.cpp  game_ui.cpp  main.cpp
test/: .cproject  dsf_history.txt  lfd_history.txt  main.cpp  score.txt
test/Debug/: fdg  main.d  makefile
test/Debug/src/: leaderboard.d  subdir.mk
test/New folder/: Timer.h  UserManager.cpp  UserManager.h  ai_logic.cpp  game_logic.cpp  game_ui.h  gigi_history.txt  history.txt  performance_log.txt
test/data/: history.txt  rana_history.txt
test/include/: User.h  ai_logic.h  game_constants.h
test/src/: UserManager.cpp  ai_logic.cpp  game_logic.cpp  game_ui.cpp  leaderboard.cpp
tests/: ai_test.cpp  hard_ai_test.cpp  history_test.cpp  leaderboard_test.cpp  medium_ai_test.cpp  minimax_test.cpp  usermanager_test.cpp
(+14 files in other folders)
